tests/pos/todo/inclusion/04-inclusion.ts

// Arrays
var trees = ["redwood", "bay", "cedar", "oak", "maple"];

assert("length" in trees); // returns true (length is an assert property)
