tests/neg/inclusion/in-02.ts

/*@ option --extrainvs */

// Arrays
var trees = ["redwood", "bay", "cedar", "oak", "maple"];


assert("mylength" in trees); // returns true (length is an assert property)

